refactor: modernize Java codebase, adopt records and clean up test suites
- Convert InsulinRepository to a Java record and remove obsolete getters
- Adopt modern Java features (List.getFirst(), Text Blocks in tests, instanceof pattern matching)
- Refactor JsonBackupHandler by extracting getJsonArray helper method
- Fix Android Lint warnings by explicitly passing Locale.getDefault() to String.format
- Optimize ViewModel UI state logic (reset carb input to empty string)
- Clean up unused getters, redundant null checks, and test assertions (assertArrayEquals)